# TC

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
artifacts/: lstm_stock.keras  scaler.pkl
src/: config.py
src/api/: main.py
src/data/: download_data.py  preprocess.py
src/models/: example_predict.py  lstm_model.py  train.py
